--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.1",
+    "concurrently": "^6.2.1",
     "cors": "^2.8.5",
     "dates-generator": "^1.0.4",
     "express": "^4.17.1",
@@ -26,6 +27,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
     "node-schedule": "^2.0.0",
+    "nodemon": "^2.0.13",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
